# prior-web

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
proto/prior/: gate.proto
public/: site.css
src/: app.rs  lib.rs  main.rs  runtime.rs
src/net/: gate_client.rs  mod.rs  prior_gate.rs  prior_gate_proto.rs
src/pages/: dashboard.rs
src/state/: gate.rs
